DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Expiry_Previous_Plan__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Expiry_Previous_Plan__c</fullName>
    <formula>BPS_Participant__r.BPS_Previous_Plan__r.BPS_Plan_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Expiry - Previous Plan</label>
    <type>Date</type>
</CustomField>