DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Sequence__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Sequence__c</fullName>
    <label>Plan Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>