DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Submitted__c</fullName>
    <formula>IF(NOT(ISBLANK( BPS_Plan_Submitted_to_NDIA__c )), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Submitted</label>
    <type>Checkbox</type>
</CustomField>