DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Submitted_Previous_Plan__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Submitted_Previous_Plan__c</fullName>
    <formula>BPS_Participant__r.BPS_Previous_Plan__r.BPS_Plan_Submitted_to_NDIA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Submitted - Previous Plan</label>
    <type>Date</type>
</CustomField>