DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Submitted_to_NDIA__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Submitted_to_NDIA__c</fullName>
    <label>Case Submitted</label>
    <type>Date</type>
</CustomField>