DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Submitted_to_NDIA_CP__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Submitted_to_NDIA_CP__c</fullName>
    <formula>BPS_Participant__r.BPS_Current_Plan__r.BPS_Plan_Submitted_to_NDIA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Submitted to NDIA - Current Plan</label>
    <type>Date</type>
</CustomField>