DevOps/force-app/main/default/objects/Case/fields/BPS_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>BPS_Plan_Type__c</fullName>
    <formula>IF(AND(BPS_Plan_Sequence__c = 1, NOT(ISPICKVAL(BPS_Review_Type__c, &quot;Unscheduled&quot;)), NOT(ISPICKVAL(BPS_Review_Type__c, &quot;Scheduled Full&quot;)), NOT(ISPICKVAL(BPS_Review_Type__c, &quot;Scheduled Light Touch&quot;)), NOT(ISPICKVAL(BPS_Review_Type__c, &quot;Scheduled Renewal&quot;)), NOT(ISPICKVAL(BPS_Review_Type__c, &quot;Auto Extension - NDIA 2021&quot;))), &quot;First Plan&quot;, IF(AND(BPS_Plan_Sequence__c &gt; 1, ISPICKVAL(BPS_Review_Type__c, &quot;Unscheduled&quot;)),&quot;Unscheduled Review&quot;, IF(AND(BPS_Plan_Sequence__c &gt; 1, NOT(ISPICKVAL(BPS_Review_Type__c, &quot;Unscheduled&quot;))),&quot;Scheduled Review&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Type</label>
    <type>Text</type>
</CustomField>