DevOps/force-app/main/default/objects/Case/fields/BPS_PlanApprovedPlus5Days__c.field-meta.xml
<CustomField>
    <fullName>BPS_PlanApprovedPlus5Days__c</fullName>
    <formula>BPS_Plan_Approved__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlanApprovedPlus5Days</label>
    <type>Date</type>
</CustomField>