DevOps/force-app/main/default/objects/Case/fields/BPS_Planning_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>BPS_Planning_Contact_Status__c</fullName>
    <label>Appointment Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
            <value>
                <fullName>Contact Successful</fullName>
            </value>
            <value>
                <fullName>Letter Sent</fullName>
            </value>
            <value>
                <fullName>UTP Complete in CRM</fullName>
            </value>
            <value>
                <fullName>UTC Complete in CRM</fullName>
            </value>
            <value>
                <fullName>Participant re-engaged after UTC/UTP</fullName>
            </value>
            <value>
                <fullName>Reschedule Required</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Contact Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>