DevOps/force-app/main/default/objects/Case/fields/BPS_Planning_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>BPS_Planning_Meeting_Held__c</fullName>
    <label>Appointment Held</label>
    <type>Date</type>
</CustomField>