DevOps/force-app/main/default/objects/Case/fields/BPS_Planning_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>BPS_Planning_Meeting_Status__c</fullName>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Reschedule Required</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>UTP Complete in CRM</fullName>
            </value>
            <value>
                <fullName>UTC Complete in CRM</fullName>
            </value>
            <value>
                <fullName>Assigned to SF at Implementation</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>