DevOps/force-app/main/default/objects/Case/fields/BPS_Post_Implementation_Survey__c.field-meta.xml
<CustomField>
    <fullName>BPS_Post_Implementation_Survey__c</fullName>
    <label>Post-Implementation Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Survey Provided</fullName>
            </value>
            <value>
                <fullName>Survey Completed With Participant</fullName>
            </value>
            <value>
                <fullName>Offered But Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>