DevOps/force-app/main/default/objects/Case/fields/BPS_preReassessmentCheckinCreated__c.field-meta.xml
<CustomField>
    <fullName>BPS_preReassessmentCheckinCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPS_preReassessmentCheckinCreated</label>
    <type>Checkbox</type>
</CustomField>