DevOps/force-app/main/default/objects/Case/fields/BPS_Proposal14daysOf1stAppt__c.field-meta.xml
<CustomField>
    <fullName>BPS_Proposal14daysOf1stAppt__c</fullName>
    <formula>IF( Proposal_Appointment_Held__c  -  Initial_Appointment_Held__c  &lt;= 14, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal14daysOf1stAppt</label>
    <type>Checkbox</type>
</CustomField>