DevOps/force-app/main/default/objects/Case/fields/BPS_Proposal_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>BPS_Proposal_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Uploaded</label>
    <type>Checkbox</type>
</CustomField>