DevOps/force-app/main/default/objects/Case/fields/BPS_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>BPS_Review_Type__c</fullName>
    <label>Confirmed Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Scheduled Full</fullName>
            </value>
            <value>
                <fullName>Scheduled Light Touch</fullName>
            </value>
            <value>
                <fullName>Scheduled Renewal</fullName>
            </value>
            <value>
                <fullName>Unscheduled</fullName>
            </value>
            <value>
                <fullName>Continuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>