DevOps/force-app/main/default/objects/Case/fields/BPS_Scheduled_Planning_Meeting__c.field-meta.xml
<CustomField>
    <fullName>BPS_Scheduled_Planning_Meeting__c</fullName>
    <label>Scheduled Planning Meeting</label>
    <type>Date</type>
</CustomField>