DevOps/force-app/main/default/objects/Case/fields/BPS_Scheduled_Planning_Meeting_CP__c.field-meta.xml
<CustomField>
    <fullName>BPS_Scheduled_Planning_Meeting_CP__c</fullName>
    <formula>BPS_Participant__r.BPS_Current_Plan__r.BPS_Scheduled_Planning_Meeting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Planning Meeting - CP</label>
    <type>Date</type>
</CustomField>