DevOps/force-app/main/default/objects/Case/fields/BPS_Support_Connection_Further_Details__c.field-meta.xml
<CustomField>
    <fullName>BPS_Support_Connection_Further_Details__c</fullName>
    <label>Support Connection Further Details:</label>
    <type>TextArea</type>
</CustomField>