DevOps/force-app/main/default/objects/Case/fields/BPS_Support_Connection_s_Related_To__c.field-meta.xml
<CustomField>
    <fullName>BPS_Support_Connection_s_Related_To__c</fullName>
    <label>Support Connection/s Related To:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal Specific Service</fullName>
            </value>
            <value>
                <fullName>Ask Izzy Website</fullName>
            </value>
            <value>
                <fullName>Carers Gateway</fullName>
            </value>
            <value>
                <fullName>Centrelink</fullName>
            </value>
            <value>
                <fullName>Community/Neighbourhood Centre</fullName>
            </value>
            <value>
                <fullName>Disability Advocacy</fullName>
            </value>
            <value>
                <fullName>Disability Specific Peak Body</fullName>
            </value>
            <value>
                <fullName>Domestic Violence Support</fullName>
            </value>
            <value>
                <fullName>ECA</fullName>
            </value>
            <value>
                <fullName>Education &amp; Training</fullName>
            </value>
            <value>
                <fullName>Family Connect and Support</fullName>
            </value>
            <value>
                <fullName>Financial Counselling</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Housing Support</fullName>
            </value>
            <value>
                <fullName>LGBTISB+</fullName>
            </value>
            <value>
                <fullName>Mainstream Health Supports</fullName>
            </value>
            <value>
                <fullName>Mental Health Care Plan</fullName>
            </value>
            <value>
                <fullName>NDIS Website</fullName>
            </value>
            <value>
                <fullName>Other Mental Health Support</fullName>
            </value>
            <value>
                <fullName>Transport Supports</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>