DevOps/force-app/main/default/objects/Case/fields/BPS_Support_Provided__c.field-meta.xml
<CustomField>
    <fullName>BPS_Support_Provided__c</fullName>
    <label>Support Provided</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BPS_Who_Received_The_Support__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Make connections to community/mainstream</fullName>
            </value>
            <value>
                <fullName>Organise to develop a Community Connections Plan</fullName>
            </value>
            <value>
                <fullName>Person provided feedback</fullName>
            </value>
            <value>
                <fullName>Person without consent</fullName>
            </value>
            <value>
                <fullName>Planning &amp; monitoring</fullName>
            </value>
            <value>
                <fullName>Provided access information</fullName>
            </value>
            <value>
                <fullName>Provided general information</fullName>
            </value>
            <value>
                <fullName>Updated person details</fullName>
            </value>
            <value>
                <fullName>UTC Complete in CRM</fullName>
            </value>
            <value>
                <fullName>Other admin task</fullName>
            </value>
            <value>
                <fullName>Navigator offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>