DevOps/force-app/main/default/objects/Case/fields/BPS_Unscheduled_Review_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BPS_Unscheduled_Review_Submitted__c</fullName>
    <formula>AND(OR(ISPICKVAL(BPS_Review_Type__c, &quot;Unscheduled&quot;), BPS_Is_Unscheduled_Review__c = TRUE), NOT(ISBLANK(BPS_Plan_Submitted_to_NDIA__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unscheduled Review Submitted</label>
    <type>Checkbox</type>
</CustomField>