DevOps/force-app/main/default/objects/Case/fields/BPS_Unsuccessful_Contacts__c.field-meta.xml
<CustomField>
    <fullName>BPS_Unsuccessful_Contacts__c</fullName>
    <label>Unsuccessful Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>