DevOps/force-app/main/default/objects/Case/fields/BPS_Who_Received_The_Support__c.field-meta.xml
<CustomField>
    <fullName>BPS_Who_Received_The_Support__c</fullName>
    <label>Who Received The Support?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person With a Disability</fullName>
            </value>
            <value>
                <fullName>Family or Carer</fullName>
            </value>
            <value>
                <fullName>Third Party Providing Support</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>