DevOps/force-app/main/default/objects/Case/fields/BPS_X1stAppt14DaysOfOffer__c.field-meta.xml
<CustomField>
    <fullName>BPS_X1stAppt14DaysOfOffer__c</fullName>
    <formula>IF( Initial_Appointment_Held__c -  BPS_Participant__r.BPS_Navigator_Offer_Outcome_Date__c &lt;=14, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1stAppt14DaysOfOffer</label>
    <type>Checkbox</type>
</CustomField>