DevOps/force-app/main/default/objects/Case/fields/BPS_X28_Days_Not_Submitted_1st_Plan__c.field-meta.xml
<CustomField>
    <fullName>BPS_X28_Days_Not_Submitted_1st_Plan__c</fullName>
    <formula>AND(BPS_Days_Since_Access_Met__c &gt;= 28, BPS_Plan_Sequence__c = 1, ISBLANK(BPS_Plan_Submitted_to_NDIA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>28 Days Not Submitted - 1st Plan</label>
    <type>Checkbox</type>
</CustomField>