DevOps/force-app/main/default/objects/Case/fields/BPS_X28_Days_To_Expiry_Not_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BPS_X28_Days_To_Expiry_Not_Submitted__c</fullName>
    <formula>AND(BPS_Days_to_Current_Expiry__c &lt;= 28, ISBLANK(BPS_Plan_Submitted_to_NDIA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>28 Days To Expiry - Not Submitted</label>
    <type>Checkbox</type>
</CustomField>