DevOps/force-app/main/default/objects/Case/fields/Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Reason__c</fullName>
    <inlineHelpText>Select a reason for closing the case. If you are unable to provide services, select this option from the bottom of the list and then pick a reason why unable to service from the sub-list below.</inlineHelpText>
    <label>Case Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Type2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consult &amp; Enquiry</fullName>
            </value>
            <value>
                <fullName>Completed Engagement</fullName>
            </value>
            <value>
                <fullName>Case plan goal achieved</fullName>
            </value>
            <value>
                <fullName>Referred to other Agency</fullName>
            </value>
            <value>
                <fullName>Unable to provide service</fullName>
            </value>
            <value>
                <fullName>Eligibility criteria no longer met</fullName>
            </value>
            <value>
                <fullName>Family/Individual declined service</fullName>
            </value>
            <value>
                <fullName>Family/Individual no longer requires support</fullName>
            </value>
            <value>
                <fullName>Family/Individual not engaging with service</fullName>
            </value>
            <value>
                <fullName>Family/Individual relocated out of area</fullName>
            </value>
            <value>
                <fullName>Family/Individual withdrew</fullName>
            </value>
            <value>
                <fullName>Fear of losing tenancy</fullName>
            </value>
            <value>
                <fullName>Other (specify in notes)</fullName>
            </value>
            <value>
                <fullName>Transfer to different worker &amp; finding program</fullName>
            </value>
            <value>
                <fullName>Transfer to different worker in same funding program</fullName>
            </value>
            <value>
                <fullName>Not Eligible or Suitable</fullName>
            </value>
            <value>
                <fullName>Client did not Engage</fullName>
            </value>
            <value>
                <fullName>Lack of Program Capacity</fullName>
            </value>
            <value>
                <fullName>Successfully completed program</fullName>
            </value>
            <value>
                <fullName>No longer meet eligibility requirements</fullName>
            </value>
            <value>
                <fullName>Poor Health (Physical Health)</fullName>
            </value>
            <value>
                <fullName>Poor Health (Mental Health)</fullName>
            </value>
            <value>
                <fullName>Issue with Provider</fullName>
            </value>
            <value>
                <fullName>Caring Responsibilities</fullName>
            </value>
            <value>
                <fullName>Incarceration</fullName>
            </value>
            <value>
                <fullName>Drug and Alcohol Misuse</fullName>
            </value>
            <value>
                <fullName>Life Event</fullName>
            </value>
            <value>
                <fullName>Lack of Family and Peer Support</fullName>
            </value>
            <value>
                <fullName>Cultural Reasons</fullName>
            </value>
            <value>
                <fullName>Reason for Disengagement Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>