DevOps/force-app/main/default/objects/Case/fields/Case_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Date__c</fullName>
    <inlineHelpText>The date that a case was closed and the Participant / Group no longer engaged</inlineHelpText>
    <label>Case Closed Date</label>
    <type>Date</type>
</CustomField>