DevOps/force-app/main/default/objects/Case/fields/Case_Closure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Closure_Notes__c</fullName>
    <description>Brief description of why a case has been closed in support of the Case Closure Reason. Necessary for when Other is selected</description>
    <inlineHelpText>If relevant, note why a case has been closed in support of the Case Closure Reason. This note is mandatory when &quot;Other (please specify)&quot; is selected as the Case Closure Reason</inlineHelpText>
    <label>Case Closure Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>