DevOps/force-app/main/default/objects/Case/fields/Case_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Member_Count__c</fullName>
    <description>Counts the number of case members on a case.</description>
    <label>Case Member Count</label>
    <summaryForeignKey>Case_Member__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>