DevOps/force-app/main/default/objects/Case/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <formula>CaseNumber &amp; &apos;: &apos; &amp;  Subject</formula>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>