DevOps/force-app/main/default/objects/Case/fields/Case_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Id__c</fullName>
    <formula>CASESAFEID(OwnerId)</formula>
    <label>Case Owner Id</label>
    <type>Text</type>
</CustomField>