DevOps/force-app/main/default/objects/Case/fields/Case_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Type__c</fullName>
    <formula>IF
(
  LEFT(OwnerId, 3) = &apos;005&apos;,
  &apos;User&apos;,
  &apos;Queue&apos;
)</formula>
    <label>Case Owner Type</label>
    <type>Text</type>
</CustomField>