DevOps/force-app/main/default/objects/Case/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Team</label>
    <type>Text</type>
</CustomField>