DevOps/force-app/main/default/objects/Case/fields/CCP_Closed_Within_60_Days__c.field-meta.xml
<CustomField>
    <fullName>CCP_Closed_Within_60_Days__c</fullName>
    <formula>IF( Case_Closed_Date__c  &lt;= KPI_CCPDueDate__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCP Closed Within 60 Days</label>
    <type>Checkbox</type>
</CustomField>