DevOps/force-app/main/default/objects/Case/fields/Children_A__c.field-meta.xml
<CustomField>
    <fullName>Children_A__c</fullName>
    <label>Children A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>Not stated/inadequately described</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>