DevOps/force-app/main/default/objects/Case/fields/Children_in_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Children_in_Accommodation__c</fullName>
    <description>SS - Are there children in the accommocation?</description>
    <inlineHelpText>SS - Are there children in the accommocation?</inlineHelpText>
    <label>Children in Accommodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>