DevOps/force-app/main/default/objects/Case/fields/CIMS_Cluster_Id__c.field-meta.xml
<CustomField>
    <fullName>CIMS_Cluster_Id__c</fullName>
    <label>CIMS Cluster Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>