DevOps/force-app/main/default/objects/Case/fields/CIMS_Support_Period_Id__c.field-meta.xml
<CustomField>
    <fullName>CIMS_Support_Period_Id__c</fullName>
    <label>CIMS Support Period Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>