DevOps/force-app/main/default/objects/Case/fields/Client_Consent_to_Anonymised_Data__c.field-meta.xml
<CustomField>
    <fullName>Client_Consent_to_Anonymised_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC - Client Consent to Anonymised Data</description>
    <inlineHelpText>CC - Client Consent to Anonymised Data</inlineHelpText>
    <label>Client Consent to Anonymised Data</label>
    <type>Checkbox</type>
</CustomField>