DevOps/force-app/main/default/objects/Case/fields/Client_Session_Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Client_Session_Assessment_Count__c</fullName>
    <label>Client Session Assessment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>