DevOps/force-app/main/default/objects/Case/fields/Client_Survey_Offered__c.field-meta.xml
<CustomField>
    <fullName>Client_Survey_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently used for Care Finder, with the potential to be offered to other programs</description>
    <label>Client Survey Offered</label>
    <type>Checkbox</type>
</CustomField>