DevOps/force-app/main/default/objects/Case/fields/Clinician__c.field-meta.xml
<CustomField>
    <fullName>Clinician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for programs where there are two concurrent case owners e.g., a support navigator and clinician in where the clinician would be assigned to this field.</description>
    <label>Clinician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>