DevOps/force-app/main/default/objects/Case/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If we had to clone this case (usually when moving between programs / contracts / etc), this will be the source.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cloned To</relationshipLabel>
    <relationshipName>ClonedTo</relationshipName>
    <type>Lookup</type>
</CustomField>