DevOps/force-app/main/default/objects/Case/fields/CNI_Number__c.field-meta.xml
<CustomField>
    <fullName>CNI_Number__c</fullName>
    <description>YoT - Police issued ID number</description>
    <inlineHelpText>YoT - Police issued ID number</inlineHelpText>
    <label>CNI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>