DevOps/force-app/main/default/objects/Case/fields/Collection_Periods_Completion__c.field-meta.xml
<CustomField>
    <fullName>Collection_Periods_Completion__c</fullName>
    <description>Total percentage of all collection periods.</description>
    <inlineHelpText>Total percentage of all collection periods.</inlineHelpText>
    <label>Collection Periods Completion</label>
    <summarizedField>Collection_Period__c.Percent_Completed__c</summarizedField>
    <summaryFilterItems>
        <field>Collection_Period__c.Complete_except_ongoing_support__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Collection_Period__c.Case__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>