DevOps/force-app/main/default/objects/Case/fields/Collection_Periods_Completion_Total__c.field-meta.xml
<CustomField>
    <fullName>Collection_Periods_Completion_Total__c</fullName>
    <label>Collection Periods Completion Total</label>
    <summarizedField>Collection_Period__c.Percent_Completed__c</summarizedField>
    <summaryForeignKey>Collection_Period__c.Case__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>