DevOps/force-app/main/default/objects/Case/fields/Community_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Community_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Engagement</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>