DevOps/force-app/main/default/objects/Case/fields/Community_Engagement_Capacity_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Community_Engagement_Capacity_Engagement__c</fullName>
    <description>Will this Group Case be included as Community Engagement of Capacity Building?</description>
    <inlineHelpText>Will this Group Case be included as Community Engagement of Capacity Building?</inlineHelpText>
    <label>Community Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Capacity Building</fullName>
            </value>
            <value>
                <fullName>Community Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>